# Receipt-Analyzer-RecipeSuggestions

./: -files --full-name api.py  .env  .env.example  .gitignore  README.md  all_fridges.json  api.py  api2.py  app.py  dashboard.py  fridge.py  history_log.txt  main.py  main_v0.py  pyproject.toml  recipe_history.py  recipe_suggester_ollama.py  requirements.txt  usernames.json
.popvenv/: pyvenv.cfg
.popvenv/Scripts/: activate  activate.bat
MySmartFridge_new/: api.py  app.py  fridge.py
MySmartFridge_new/templates/: fridge.html  index.html  login.html  recipes.html
data/: all_fridges.json  history.json  usernames.json
final_v2/: README.md  app.py  fridge.py  history.json  main.py  requirements.txt
final_v2/data/: all_fridges.json  history.json  recipe_history.json
final_v2/templates/: history.html  index.html  recipe_history.html  recipes.html
final_v2/tests/: global_tests.py
prev_v2_revise/: app.py  recipe_suggester_ollama.py
resources/: api.py  fridge.py  recipe_suggester_ollama.py
templates/: fridge.html  history.html  index.html  login.html  menu.html  recipes.html  scan.html
tests/: testing_v1.py
