[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "receipt-analyzer-recipe-suggestions"
version = "0.1.0"
description = "Receipt OCR via Tabscanner, fridge inventory, and Ollama-powered recipe suggestions."
readme = "Receipt-Analyzer-RecipeSuggestions/README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Collaborators" }]
# If you want, set a license: { file = "LICENSE" } or { text = "Proprietary" }

# Runtime dependencies used in the project
dependencies = [
  "requests>=2.31",
  "tabulate>=0.9",
  "python-dotenv>=1.0",
]

[project.urls]
Homepage = "."

[project.optional-dependencies]
# Install with: pip install .[dev]
dev = [
  "ruff>=0.4",
  "black>=24.10",
  "isort>=5.13",
  "pytest>=8.2",
  "mypy>=1.10",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
# Choose your Python version target here
target-version = "py310"
# Common rule sets: E/F (pycodestyle/pyflakes), I (imports), UP (pyupgrade), B (flake8-bugbear)
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
